--- a/css/style.css
+++ b/css/style.css
@@ -37,10 +37,10 @@ a {
   left: -10%;
   top: 5rem;
   z-index: 10;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  transition: all .2s; }
+  transition: all .2s;
+  opacity: .2;
+  width: 3.5rem;
+  height: 3.5rem; }
   .side_menu .button_up {
     transform: rotate(-90deg);
     fill: #757575; }
@@ -48,15 +48,6 @@ a {
       fill: #01BAEF; }
     .side_menu .button_up:active {
       transform: rotate(-90deg) scale(0.95); }
-  .side_menu a {
-    width: 3rem;
-    height: 3rem; }
-    .side_menu a svg {
-      fill: #757575; }
-      .side_menu a svg:hover {
-        fill: #01BAEF; }
-      .side_menu a svg:active {
-        transform: scale(0.95); }
 
 .side_menu_showed {
   left: 5%;
@@ -79,8 +70,8 @@ a {
     display: flex;
     gap: 15px; }
     .header .header_links a {
-      width: 3rem;
-      height: 3rem; }
+      width: 4rem;
+      height: 4rem; }
       .header .header_links a svg {
         fill: #757575; }
         .header .header_links a svg:hover {
@@ -103,12 +94,13 @@ a {
       width: 100%;
       overflow: hidden;
       border-radius: 3.125rem;
-      box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.15); }
+      box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.15);
+      position: relative; }
       .hello .hello_cards .cards_slider .cards_row {
         width: 100%;
         display: flex;
         position: relative;
-        transition: all .2s;
+        transition: left .2s ease-out;
         left: 0; }
       .hello .hello_cards .cards_slider .card {
         min-width: 100%;
@@ -116,7 +108,7 @@ a {
         display: flex;
         flex-direction: column;
         padding: 3rem;
-        font-size: 1.375rem;
+        font-size: 1.5rem;
         gap: 1.2rem; }
         .hello .hello_cards .cards_slider .card .card_header {
           color: #0B4F6C;
@@ -222,7 +214,7 @@ a {
           width: 100%;
           object-fit: contain; }
       .web-skills .web-skills_items .skills_item .skills_text {
-        font-size: 1.2rem; }
+        font-size: 1.5rem; }
       .web-skills .web-skills_items .skills_item .skills_accent {
         color: #0B4F6C; }
 
@@ -282,7 +274,7 @@ a {
         width: 100%;
         object-fit: contain; }
     .gd .gd_skills .skills_item .skills_text {
-      font-size: 1.2rem; }
+      font-size: 1.5rem; }
     .gd .gd_skills .skills_item .skills_accent {
       color: #0B4F6C; }
 
@@ -304,8 +296,8 @@ a {
     display: flex;
     gap: 1rem; }
     .footer .footer_links a {
-      width: 3rem;
-      height: 3rem; }
+      width: 4rem;
+      height: 4rem; }
       .footer .footer_links a svg {
         fill: #757575; }
         .footer .footer_links a svg:hover {
@@ -314,14 +306,8 @@ a {
           transform: scale(0.95); }
 
 @media (max-width: 1400px) {
-  .side_menu {
-    top: 1rem; }
-    .side_menu a {
-      width: 2.5rem;
-      height: 2.5rem; }
   .side_menu_showed {
-    left: 0.7rem;
-    top: 1rem; } }
+    left: 0.7rem; } }
 
 @media (max-width: 1200px) {
   html {
@@ -349,7 +335,9 @@ a {
 
 @media (max-width: 1000px) {
   html {
-    font-size: 13px; } }
+    font-size: 13px; }
+  .side_menu .button_up:hover {
+    fill: #757575; } }
 
 @media (max-width: 900px) {
   html {
@@ -429,25 +417,17 @@ a {
 
 @media (max-width: 570px) {
   html {
-    font-size: 9px; } }
-
-@media (max-width: 470px) {
-  html {
-    font-size: 9px; }
+    font-size: 10px; }
   .hello {
     position: relative;
     display: flex;
     width: 100%; }
     .hello .hello_image {
-      position: absolute;
-      left: 0;
-      top: 1rem;
-      width: 7rem;
-      z-index: 5; }
+      display: none; }
     .hello .hello_cards {
-      width: 100%; }
-      .hello .hello_cards .card_header {
-        padding-left: 5rem; }
+      width: 100%; } }
+
+@media (max-width: 470px) {
   .web {
     margin-bottom: 0; }
     .web .web_items {
@@ -456,18 +436,6 @@ a {
     width: 100%; }
   .gd .gd_skills {
     width: 100%; } }
-
-@media (max-width: 390px) {
-  html {
-    font-size: 8px; } }
-
-@media (max-width: 340px) {
-  html {
-    font-size: 7.5px; } }
-
-@media (max-width: 300px) {
-  html {
-    font-size: 7px; } }
 
 .loader_wrap {
   position: absolute;
