--- a/scss/style.scss
+++ b/scss/style.scss
@@ -54,8 +54,8 @@ a {
 }
 
 @mixin svg_link {
-    width: 3rem;
-    height: 3rem;
+    width: 4rem;
+    height: 4rem;
     svg {
         fill: $color_text;
         &:hover {
@@ -72,10 +72,10 @@ a {
     left: -10%;
     top: 5rem;
     z-index: 10;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
     transition: all .2s;
+    opacity: .2;
+    width: 3.5rem;
+    height: 3.5rem;
     .button_up {
         transform: rotate(-90deg);
         fill: $color_text;
@@ -84,10 +84,7 @@ a {
         }
         &:active {
             transform: rotate(-90deg) scale(.95);
-        }
-    }
-    a {
-        @include svg_link;
+        }    
     }
 }
 .side_menu_showed {
