--- a/scss/media/media.scss
+++ b/scss/media/media.scss
@@ -198,5 +198,19 @@
     }
 }
 
+@media (max-width: 420px) {
+    .hello {
+        .hello_cards {
+            .cards_slider {
+                .card {
+                    padding: 2.5rem;
+                    font-size: 1.4rem;
+                    gap: 1rem;
+                }
+            }  
+        }
+    }
+}
+
 
 
